<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    tools:context=".Hungry">
    <TextView
        android:id="@+id/textView21"
        android:background="@color/blue"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/cookies"
        android:textColor="@color/white"
        android:gravity="center_vertical"
        android:paddingLeft="20dp"
        android:textSize="30sp"
        android:textFontWeight="1"
        />
    <ImageView
        android:id="@+id/img"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:importantForAccessibility="no"
        android:src="@mipmap/hungry"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView21"
        android:layout_marginTop="20dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@color/indigo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img"
        android:orientation="vertical"
        android:paddingTop="20dp"
        android:paddingStart="20dp"
        tools:ignore="RtlHardcoded"
        android:layout_marginTop="20dp"

        >

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/i_am_so_hungry"
            android:textColor="@color/white"
            android:textSize="25sp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="171dp"
            tools:layout_editor_absoluteY="319dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eat_cookies"

            />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>